--- a/styles/themes.css
+++ b/styles/themes.css
@@ -1,17 +1,21 @@
 :root {
-  --primary-darker: theme('colors.emerald.900');
+  --neutral-darkest: theme('colors.coolGray.900');
+  --primary-darker: theme('colors.emerald.800');
   --primary-dark: theme('colors.emerald.700');
   --primary-semidark: theme('colors.emerald.600');
   --primary: theme('colors.emerald.500');
   --primary-semilight: theme('colors.emerald.300');
-  --primary-light: theme('colors.emerald.100');
-  --primary-lighter: theme('colors.emerald.50');
+  --primary-light: theme('colors.emerald.200');
+  --primary-lighter: theme('colors.emerald.100');
+  --neutral-lightest: theme('colors.coolGray.50');
 
-  --neutral-darker: theme('colors.coolGray.900');
+  --neutral-darkest: theme('colors.coolGray.900');
+  --neutral-darker: theme('colors.coolGray.800');
   --neutral-dark: theme('colors.coolGray.700');
   --neutral-semidark: theme('colors.coolGray.600');
   --neutral: theme('colors.coolGray.500');
   --neutral-semilight: theme('colors.coolGray.400');
-  --neutral-light: theme('colors.coolGray.300');
+  --neutral-light: theme('colors.coolGray.200');
   --neutral-lighter: theme('colors.coolGray.100');
+  --neutral-lightest: theme('colors.coolGray.50');
 }
