--- a/styles/themes.css
+++ b/styles/themes.css
@@ -1,5 +1,5 @@
 :root {
-  --neutral-darkest: theme('colors.coolGray.900');
+  --primary-darkest: theme('colors.coolGray.900');
   --primary-darker: theme('colors.emerald.800');
   --primary-dark: theme('colors.emerald.700');
   --primary-semidark: theme('colors.emerald.600');
@@ -7,7 +7,7 @@
   --primary-semilight: theme('colors.emerald.300');
   --primary-light: theme('colors.emerald.200');
   --primary-lighter: theme('colors.emerald.100');
-  --neutral-lightest: theme('colors.coolGray.50');
+  --primary-lightest: theme('colors.coolGray.50');
 
   --neutral-darkest: theme('colors.coolGray.900');
   --neutral-darker: theme('colors.coolGray.800');
